--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
+    <script defer src="./js/controller/cardModule.js"></script>
+    <script defer src="./js/controller/cashModule.js"></script>
+    <script defer src="./js/controller/core.js"></script>
+
+    <script defer src="./js/view/cardHolderView.js"></script>
+    <script defer src="./js/view/cardReaderView.js"></script>
+    <script defer src="./js/view/generalView.js"></script>
     <script defer src="./js/main.js"></script>
 </head>
 <body>
