--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>CashMachine</title>
 
+    <link rel="stylesheet" href="css/main.css">
+
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
     <script defer src="./js/controller/cardModule.js"></script>
