--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
     <script defer src="./js/model/navigationMenuModel.js"></script>
-    <script defer src="./js/model/cardDataModel.js.js"></script>
+    <script defer src="./js/model/cardDataModel.js"></script>
 
     <script defer src="./js/controller/cardModule.js"></script>
     <script defer src="./js/controller/cashModule.js"></script>
@@ -19,7 +19,7 @@
     <script defer src="./js/view/cardHolderView.js"></script>
     <script defer src="./js/view/cardReaderView.js"></script>
     <script defer src="./js/view/generalView.js"></script>
-    <script defer src="./js/view/displayView.js.js"></script>
+    <script defer src="./js/view/displayView.js"></script>
     <script defer src="./js/main.js"></script>
 </head>
 <body>
