--- a/test/test.html
+++ b/test/test.html
@@ -6,8 +6,8 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.min.css">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.5.0/chai.js"></script>
+    <script src="lib/mocha.min.js"></script>
+    <script src="lib/chai.min.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
