try to create some layout for cards. it have some buggs

--- a/index.html
+++ b/index.html
@@ -56,5 +56,9 @@
 </div>
 
   </div>
+<div class = "wallet">
+    <button type="button" class = 'add-card-button'>Add card</button>
+    <input placeholder="Enter the name of cardholder" class = "name-input">
+</div>
 </body>
 </html>
