--- a/test/test.html
+++ b/test/test.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <title>CashMachine Tests</title>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mocha/3.2.0/mocha.min.css">
-
-    <script src="lib/mocha.min.js"></script>
-    <script src="lib/chai.min.js"></script>
+    <link rel="stylesheet" href="lib/mocha.min.css">
 </head>
 <body>
 <div id="mocha"></div>
 
+<script src="lib/mocha.min.js"></script>
+<script src="lib/chai.min.js"></script>
 <script>
     mocha.ui('bdd');
     mocha.reporter('html');
