--- a/test/test.html
+++ b/test/test.html
@@ -12,14 +12,20 @@
 <script src="lib/mocha.min.js"></script>
 <script src="lib/chai.min.js"></script>
 <script>
-    initMochaPhantomJS();
+    if(typeof initMochaPhantomJS != 'undefined') {
+        initMochaPhantomJS();
+    }
     mocha.ui('bdd');
     mocha.reporter('html');
     var assert = chai.assert;
 </script>
 
 <script src="../js/controller/cardModule.js"></script>
+<script src="../js/controller/cashModule.js"></script>
+<script src="../js/controller/core.js"></script>
+
 <script src="controller/cardModuleTest.js"></script>
+<script src="controller/coreTest.js"></script>
 
 <script>
     if (window.mochaPhantomJS) { mochaPhantomJS.run(); }
