fix script import

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <script defer src="./js/controller/cashModule.js"></script>
     <script defer src="./js/controller/navigationModule.js"></script>
     <script defer src="./js/controller/core.js"></script>
-    <script defer src="./js/view/cardHolderView.js"></script>
+
     <script defer src="./js/view/cardReaderView.js"></script>
     <script defer src="./js/view/generalView.js"></script>
     <script defer src="./js/view/displayView.js"></script>
+    <script defer src="./js/view/cardLayoutView.js"></script>
+
     <script defer src="./js/main.js"></script>
 </head>
 <body>
