set new better metods to cardDataModel and improove caedLayoutView

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
   </div>
 <div class = "wallet">
     <button type="button" class = 'add-card-button'>Add card</button>
-    <input placeholder="Enter the name of cardholder" class = "name-input">
+    <br>
+    <input placeholder="Enter the name of cardholder" class = "name-input"><button class = "ok-button">←</button>
 </div>
 </body>
 </html>
