(Test to the Cash Module)

--- a/test/test.html
+++ b/test/test.html
@@ -5,6 +5,7 @@
     <title>CashMachine Tests</title>
 
     <link rel="stylesheet" href="lib/mocha.min.css">
+
 </head>
 <body>
 <div id="mocha"></div>
@@ -24,9 +25,11 @@
 <script src="../js/controller/cashModule.js"></script>
 <script src="../js/controller/core.js"></script>
 
-<script src="controller/cardModuleTest.js"></script>
-<script src="controller/coreTest.js"></script>
+<!--<script src="controller/cardModuleTest.js"></script>-->
+<!--<script src="controller/coreTest.js"></script>-->
 
+
+<script src="controller/cashModuleTest.js"></script>
 <script>
     if (window.mochaPhantomJS) { mochaPhantomJS.run(); }
     else { mocha.run(); }
