--- a/test/test.html
+++ b/test/test.html
@@ -23,6 +23,7 @@
 <script src="../js/controller/cardModule.js"></script>
 <script src="../js/controller/cashModule.js"></script>
 <script src="../js/controller/core.js"></script>
+<script src="../js/model/cardDataModel.js"></script>
 
 <script src="controller/cardModuleTest.js"></script>
 <script src="controller/coreTest.js"></script>
