--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>CashMachine</title>
     <link rel="stylesheet" href="css/main.css">
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
     <script defer src="./js/model/navigationMenuModel.js"></script>
     <script defer src="./js/model/cardDataModel.js"></script>
+    <script defer src="./js/model/state.js"></script>
 
     <script defer src="./js/controller/cardModule.js"></script>
     <script defer src="./js/controller/cashModule.js"></script>
@@ -53,7 +55,7 @@
       <button type="button" id="btn0" class="number">0</button>
     </div>
     <div class="control-buttons">
-      <button type="button" id="cansel" class="control cansel-button">Cansel</button><br>
+      <button type="button" id="cancel" class="control cansel-button">Cancel</button><br>
       <button type="button" id="clear" class="control clear-button">Clear</button><br>
       <button type="button" id="submit" class="control  submit-button">Submit</button><br>
     </div>
