--- a/test/test.html
+++ b/test/test.html
@@ -21,11 +21,13 @@
 </script>
 
 <script src="../js/controller/cardModule.js"></script>
-<script src="../js/controller/cashModule.js"></script>
 <script src="../js/controller/core.js"></script>
+<script src="../js/view/generalView.js"></script>
+
 
 <script src="controller/cardModuleTest.js"></script>
 <script src="controller/coreTest.js"></script>
+<script src="controller/buttonsTest.js"></script>
 
 <script>
     if (window.mochaPhantomJS) { mochaPhantomJS.run(); }
