Card receiver animation + little  style

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
       <button type="button" id="btn0" class="number">0</button>
     </div>
     <div class="control-buttons">
+      <p id="textRexeiver"> Insert card here </p>
+      <hr id="glowingReceiver">
+      <hr id="staticReceiver">
       <button type="button" id="cancel" class="control cansel-button">Cancel</button><br>
       <button type="button" id="clear" class="control clear-button">Clear</button><br>
       <button type="button" id="submit" class="control  submit-button">Submit</button><br>
