--- a/index.html
+++ b/index.html
@@ -70,5 +70,8 @@
     <br>
     <input placeholder="Enter the name of cardholder" class = "name-input"><button class = "ok-button">←</button>
 </div>
+<div id="draggME">
+  draggME
+</div>
 </body>
 </html>
