--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>CashMachine</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/receiver.css">
+
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
     <script defer src="./js/model/navigationMenuModel.js"></script>
@@ -24,7 +26,6 @@
 </head>
 <body>
   <div id="wrapper" class="wrapper">
-  <button type="button" class="card" id="getCard">Put your card here</button>
     <div class="cash-machine">
     <div class="display-area" id="display-area">
       <div class="left-side-buttons">
@@ -54,9 +55,11 @@
       <button type="button" id="btn9" class="number">9</button>
       <button type="button" id="btn0" class="number">0</button>
     </div>
-    <div class="control-buttons">
-      <p id="textRexeiver"> Insert card here </p>
-      <hr id="glowingReceiver">
+    <iv class="control-buttons">
+      <div id="receiverWrap">
+        <p id="textRexeiver"> Insert card here </p>
+        <hr id="receiver">
+      </div>
       <hr id="staticReceiver">
       <button type="button" id="cancel" class="control cansel-button">Cancel</button><br>
       <button type="button" id="clear" class="control clear-button">Clear</button><br>
