--- a/test/test.html
+++ b/test/test.html
@@ -5,7 +5,6 @@
     <title>CashMachine Tests</title>
 
     <link rel="stylesheet" href="lib/mocha.min.css">
-
 </head>
 <body>
 <div id="mocha"></div>
@@ -30,11 +29,9 @@
 
 <script src="mock/view/displayViewMock.js"></script>
 
-<!--<script src="controller/cardModuleTest.js"></script>-->
-<!--<script src="controller/coreTest.js"></script>-->
+<script src="controller/cardModuleTest.js"></script>
+<script src="controller/coreTest.js"></script>
 
-
-<script src="controller/cashModuleTest.js"></script>
 <script>
     if (window.mochaPhantomJS) { mochaPhantomJS.run(); }
     else { mocha.run(); }
