chnge core and modules
1) add menu in at, after pin entered
2)add cash controller for adding nominals for cash view
3) add in cashModule method - return nominals in module for menu
4) add new state - state menu between enterPin and EnterSum

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     <script defer src="./js/controller/cashModule.js"></script>
     <script defer src="./js/controller/navigationModule.js"></script>
     <script defer src="./js/controller/core.js"></script>
+    <script defer src="js/controller/cashOutputModule.js"></script>
 
     <script defer src="./js/view/cardReaderView.js"></script>
     <script defer src="./js/view/generalView.js"></script>
     <script defer src="./js/view/displayView.js"></script>
     <script defer src="./js/view/cardLayoutView.js"></script>
+    <script defer src="js/view/cashOutputView.js"></script>
 
     <script defer src="./js/main.js"></script>
 </head>
