--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
     </div>
   </div>
 <div class = "wallet">
-    <button type="button" class = 'add-card-button'>Add card</button>
+    <!--<button type="button" class = 'add-card-button'>Add card</button>
     <br>
-    <input placeholder="Enter the name of cardholder" class = "name-input"><button class = "ok-button">←</button>
+    <input placeholder="Enter the name of cardholder" class = "name-input"><button class = "ok-button">←</button>-->
 </div>
 <div id="draggME">
   draggME
