--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <button type="button" id="btn9" class="number">9</button>
       <button type="button" id="btn0" class="number">0</button>
     </div>
-    <iv class="control-buttons">
+    <div class="control-buttons">
       <div id="receiverWrap">
         <p id="textRexeiver"> Insert card here </p>
         <hr id="receiver">
