--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   <div id="wrapper" class="wrapper">
-    <div class="cash-machine">
+    <div class="cash-machine droppable">
     <div class="display-area" id="display-area">
       <div class="left-side-buttons">
       <button class="empty"><br></button><br> <button class="empty"></button><br><button class="empty"></button><br><button class="empty"></button>
@@ -75,8 +75,8 @@
     <br>
     <input placeholder="Enter the name of cardholder" class = "name-input"><button class = "ok-button">←</button>
 </div>
-<div id="draggME">
+<!-- <div id="draggME">
   draggME
-</div>
+</div> -->
 </body>
 </html>
