--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <br>
     <div class="text-area">
-       <textarea id="text"></textarea>
+       <div id="text"></div>
     </div>
     <br>
     <div id="buttons" class="buttons">
