--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div id="wrapper" class="wrapper">
-    <div class="cash-machine">
+    <div class="cash-machine droppable">
     <div class="display-area" id="display-area">
       <div class="left-side-buttons">
       <button class="empty"><br></button><br> <button class="empty"></button><br><button class="empty"></button><br><button class="empty"></button>
